# signalwireworkshop

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  config.sh  docker-compose.yml  setup.sh  test.sh
cpp/: CMakeLists.txt  README.md
cpp/steps/: step04_hello_agent.cpp  step06_joke_agent.cpp  step07_joke_agent.cpp  step08_weather_joke_agent.cpp  step09_weather_joke_agent.cpp  step10_weather_joke_agent.cpp  step11_complete_agent.cpp
dotnet/: README.md
dotnet/steps/: step04_hello_agent.cs  step06_joke_agent.cs  step07_joke_agent.cs  step08_weather_joke_agent.cs  step09_weather_joke_agent.cs  step10_weather_joke_agent.cs  step11_complete_agent.cs
go/: README.md  go.mod
go/steps/step04_hello_agent/: main.go
go/steps/step06_joke_agent/: main.go
go/steps/step07_joke_agent/: main.go
go/steps/step08_weather_joke_agent/: main.go
go/steps/step09_weather_joke_agent/: main.go
go/steps/step10_weather_joke_agent/: main.go
go/steps/step11_complete_agent/: main.go
java/: README.md  build.gradle  settings.gradle
java/steps/: Step04HelloAgent.java  Step06JokeAgent.java  Step07JokeAgent.java  Step08WeatherJokeAgent.java  Step09WeatherJokeAgent.java  Step10WeatherJokeAgent.java  Step11CompleteAgent.java
perl/: README.md  cpanfile
perl/steps/: step04_hello_agent.pl  step06_joke_agent.pl  step07_joke_agent.pl  step08_weather_joke_agent.pl  step09_weather_joke_agent.pl  step10_weather_joke_agent.pl  step11_complete_agent.pl
php/: README.md
php/steps/: step04_hello_agent.php  step06_joke_agent.php  step07_joke_agent.php  step08_weather_joke_agent.php  step09_weather_joke_agent.php  step10_weather_joke_agent.php  step11_complete_agent.php
python/: README.md
python/steps/: step04_hello_agent.py  step06_joke_agent.py  step07_joke_agent.py  step08_weather_joke_agent.py  step09_weather_joke_agent.py  step10_weather_joke_agent.py  step11_complete_agent.py
ruby/: Gemfile  README.md
ruby/steps/: step04_hello_agent.rb  step06_joke_agent.rb  step07_joke_agent.rb  step08_weather_joke_agent.rb  step09_weather_joke_agent.rb  step10_weather_joke_agent.rb  step11_complete_agent.rb
typescript/: README.md  package.json  tsconfig.json
typescript/steps/: step04_hello_agent.ts  step06_joke_agent.ts  step07_joke_agent.ts  step08_weather_joke_agent.ts  step09_weather_joke_agent.ts  step10_weather_joke_agent.ts  step11_complete_agent.ts
